<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
  <string name="app_name">Stock Hawk</string>

  <string name="action_example">Example action</string>

  <!-- Settings menu -->
  <string name="action_settings">Settings</string>

  <!-- Menu button title for action that changes displayed units to dollar values -->
  <string name="action_change_units_dollar">Change units to dollar value</string>
  <!-- Menu button title for action that changes displayed units to percentages -->
  <string name="action_change_units_percentages">Change units to percent value</string>
  <!-- line chart buttons -->
  <string name="day_button_description">Show hourly bid price changes</string>
  <string name="week_button_description">Show daily bid price changes</string>
  <string name="year_button_description">Show monthly bid price changes</string>
  <string name="day_button_label">Hours</string>
  <string name="week_button_label">Days</string>
  <string name="year_button_label">Months</string>
  <!-- line chart label when hours button is pressed -->
  <string name="hourly_changes">Bid price per hour (<xliff:g id="symbol">%1$s</xliff:g>)</string>
  <!-- line chart label when days button is pressed -->
  <string name="daily_changes">Bid price per day (<xliff:g id="symbol">%1$s</xliff:g>)</string>
  <!-- line chart label when months button is pressed -->
  <string name="monthly_changes">Bid price per month (<xliff:g id="symbol">%1$s</xliff:g>)</string>
  <!-- Months for chart labels -->
  <string name="january">Jan</string>
  <string name="february">Feb</string>
  <string name="march">Mar</string>
  <string name="april">Apr</string>
  <string name="may">May</string>
  <string name="june">Jun</string>
  <string name="july">Jul</string>
  <string name="august">Aug</string>
  <string name="september">Sep</string>
  <string name="october">Oct</string>
  <string name="november">Nov</string>
  <string name="december">Dec</string>

  <!-- line chart message when there are not enough data points to graph hours -->
  <string name="no_data_points_hour">There are not enough data points to graph hours. Please try again in an hour.</string>
  <!-- line chart message when there are not enough data points to graph days -->
  <string name="no_data_points_day">There are not enough data points to graph days. Please try again tomorrow.</string>
  <!-- line chart message when there are not enough data points to graph months -->
  <string name="no_data_points_month">There are not enough data points to graph months. Please try again next month.</string>

  <!-- Floating button title for symbol search action -->
  <string name="symbol_search">Symbol Search</string>

  <!-- Symbol search dialog title -->
  <string name="content_test">Search for a Stock Symbol</string>

  <!-- stock symbol to search for -->
  <string name="input_hint" translatable="false">FB</string>

  <!-- chart description -->
  <string name="chart_bidprice_over_time">Line chart displaying bid price over time</string>

  <string name="input_prefill"></string>

  <!-- service related -->
  <string name="intent_extra_tag" translatable="false">tag</string>
  <string name="intent_extra_periodic_tag" translatable="false">periodic</string>
  <string name="intent_extra_symbol" translatable="false">symbol</string>
  <string name="intent_extra_init" translatable="false">init</string>
  <string name="intent_extra_add" translatable="false">add</string>

  <!-- Error messages displayed to the user -->
  <!-- Message displayed when there is no internet connection -->
  <string name="quotes_status_no_internet">Uh-oh! This app requires an internet connection</string>
  <!-- Message displayed when attempting to search for stock symbol that is already present in the DB -->
  <string name="symbol_exists">This stock is already saved!</string>
  <!-- Message displayed when symbol search returns no data -->
  <string name="invalid_symbol">Query for symbol <xliff:g id="symbol">%1$s</xliff:g> returned no data</string>
  <!-- Message displayed when user performed symbol search without entering any characters -->
  <string name="empty_input">Your search input was empty</string>
  <!-- Message displayed when the server returns invalid data -->
  <string name="quotes_status_server_invalid">The server returned invalid data. Please check for software updates.</string>
  <!-- Message displayed when the server is down -->
  <string name="quotes_status_server_down">The server is not responding. Please check your internet connection.</string>
  <!-- Message displayed when the server returns no usable data -->
  <string name="quotes_status_no_data">The symbol is not valid or the server does not have any data for this symbol</string>
  <!-- Message displayed when the server URL cannot be created -->
  <string name="quotes_status_bad_quotes_url">There was a problem with the server URL</string>
  <!-- Message displayed when the data cannot be saved locally -->
  <string name="quotes_status_db_error">Unable to save data. Please check for software updates.</string>
  <!-- Message displayed when the view is empty but the status is ok  -->
  <string name="quotes_status_ok">Press the \'+\' button to search for symbols</string>
  <!-- Standard error message when quotes cannot be displayed and the exact error is unknown -->
  <string name="empty_view">Quotes information is not available</string>

  <!-- Log messages -->
  <!-- When inserting of multiple items into the DB fails -->
  <string name="batch_insert_error">Error applying batch insert</string>

  <!-- key in shared preferences for storing error codes -->
  <string name="pref_quotes_status_key" translatable="false">pref_quotes_status_key</string>


</resources>
